--- a/templates/manage_stress_admin.html
+++ b/templates/manage_stress_admin.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
     {% block stylesheet %}
-   <!--Favicon Icon-->
-   <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!--Custom style.css-->
@@ -63,7 +61,7 @@
                                 </a>
                             </li>
                             <li class="parent">
-                                <a href="#" class=""><i class="fas fa-smile mr-3"></i>
+                                <a href="/manage_stress_admin" class=""><i class="fas fa-smile mr-3"></i>
                                     <span class="none">Manage Stress</span>
                                 </a>
                             </li>
@@ -87,7 +85,7 @@
                     <div class="col-sm-12">
                         <!--Datatable-->
                         <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                            <button class="btn btn-success">
+                            <button class="btn btn-success" data-toggle="modal" data-target=".bd-example-modal">
                                 <i class="fas fa-plus mr-3"></i>Ajouter
                             </button>
                             
@@ -111,35 +109,7 @@
                                             <td>Edinburgh</td>
                                             <td>61</td>
                                             <td>
-                                                <button class="btn btn-info btn-round">
-                                                    <i class="fa fa-edit"></i>
-                                                </button>
-                                                <button class="btn btn-danger btn-round">
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Garrett Winters</td>
-                                            <td>Accountant</td>
-                                            <td>Tokyo</td>
-                                            <td>63</td>
-                                            <td>
-                                                <button class="btn btn-info btn-round">
-                                                    <i class="fa fa-edit"></i>
-                                                </button>
-                                                <button class="btn btn-danger btn-round">
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ashton Cox</td>
-                                            <td>Junior Technical Author</td>
-                                            <td>San Francisco</td>
-                                            <td>2009/01/12</td>
-                                            <td>
-                                                <button class="btn btn-info btn-round">
+                                                <button class="btn btn-info btn-round" data-toggle="modal" data-target="#update">
                                                     <i class="fa fa-edit"></i>
                                                 </button>
                                                 <button class="btn btn-danger btn-round">
@@ -156,6 +126,79 @@
                 <!--Dashboard widget-->
             </div>
         </div>
+
+        <div class="modal fade bd-example-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h5 class="modal-title text-secondary"><strong>Ajout Ressource</strong></h5>
+                        <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body text-justify">
+                        <form action="">
+                            {%  csrf_token %}
+                            <div class="form-group">
+                                <label for="Titre_MS" class="mb-0">Titre</label>
+                                <input type="text" id="Titre_MS" class="form-control" placeholder="Titre"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Description_MS" class="mb-0">Description</label>
+                                <textarea id="Description_MS" class="form-control" placeholder="Description"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="Fichier_MS" class="mb-0">Fichier</label>
+                                <input type="file" id="Fichier_MS" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Date_pub_MS" class="mb-0">Date de Publication</label>
+                                <input type="date" id="Date_pub_MS" class="form-control"/>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default">Enregistrer</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="update" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h5 class="modal-title text-secondary"><strong>Modification Ressource</strong></h5>
+                        <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body text-justify">
+                        <form action="">
+                            {%  csrf_token %}
+                            <div class="form-group">
+                                <label for="Titre_MS" class="mb-0">Titre</label>
+                                <input type="text" id="Titre_MS" class="form-control" placeholder="Titre"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Description_MS" class="mb-0">Description</label>
+                                <textarea id="Description_MS" class="form-control" placeholder="Description"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="Fichier_MS" class="mb-0">Fichier</label>
+                                <input type="file" id="Fichier_MS" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Date_pub_MS" class="mb-0">Date de Publication</label>
+                                <input type="date" id="Date_pub_MS" class="form-control"/>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default">Modifier</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     {% endblock content %}
 
     {% block script %}
