--- a/templates/news_post.html
+++ b/templates/news_post.html
@@ -2,8 +2,6 @@
 {% load static %}
 
     {% block stylesheet %}
-   <!--Favicon Icon-->
-   <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <!--Custom style.css-->
@@ -57,7 +55,7 @@
                                 </a>
                             </li>
                             <li class="parent">
-                                <a href="#" class=""><i class="fas fa-address-book mr-3"></i>
+                                <a href="/news_post" class=""><i class="fas fa-address-book mr-3"></i>
                                     <span class="none">News ou Post</span>
                                 </a>
                             </li>
@@ -91,7 +89,7 @@
                     <div class="col-sm-12">
                         <!--Datatable-->
                         <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                            <button class="btn btn-success">
+                            <button class="btn btn-success" data-toggle="modal" data-target=".bd-example-modal">
                                 <i class="fas fa-plus mr-3"></i>Ajouter
                             </button>
                             
@@ -117,37 +115,7 @@
                                             <td>61</td>
                                             <td>2011/04/25</td>
                                             <td>
-                                                <button class="btn btn-info btn-round">
-                                                    <i class="fa fa-edit"></i>
-                                                </button>
-                                                <button class="btn btn-danger btn-round">
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Garrett Winters</td>
-                                            <td>Accountant</td>
-                                            <td>Tokyo</td>
-                                            <td>63</td>
-                                            <td>2011/07/25</td>
-                                            <td>
-                                                <button class="btn btn-info btn-round">
-                                                    <i class="fa fa-edit"></i>
-                                                </button>
-                                                <button class="btn btn-danger btn-round">
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td>Ashton Cox</td>
-                                            <td>Junior Technical Author</td>
-                                            <td>San Francisco</td>
-                                            <td>66</td>
-                                            <td>2009/01/12</td>
-                                            <td>
-                                                <button class="btn btn-info btn-round">
+                                                <button class="btn btn-info btn-round" data-toggle="modal" data-target="#update">
                                                     <i class="fa fa-edit"></i>
                                                 </button>
                                                 <button class="btn btn-danger btn-round">
@@ -162,6 +130,92 @@
                     </div>
                 </div>
                 <!--Dashboard widget-->
+            </div>
+        </div>
+
+        <div class="modal fade bd-example-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h5 class="modal-title text-secondary"><strong>Ajout News, Posts</strong></h5>
+                        <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body text-justify">
+                        <form action="">
+                            {%  csrf_token %}
+                            <div class="form-group">
+                                <label for="Titre" class="mb-0">Titre</label>
+                                <input type="text" id="Titre" class="form-control" placeholder="Titre"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Contenu" class="mb-0">Contenu</label>
+                                <textarea id="Contenu" class="form-control" placeholder="Contenu"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="Fichier" class="mb-0">Fichier</label>
+                                <input type="file" id="Fichier" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Date_pub" class="mb-0">Date de Publication</label>
+                                <input type="date" id="Date_pub" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Type" class="mb-0">Type</label>
+                                <select id="Type" class="custom-select">
+                                    <option value="News">News</option>
+                                    <option value="Posts">Posts</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default">Enregistrer</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="update" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h5 class="modal-title text-secondary"><strong>Modification News, Posts</strong></h5>
+                        <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body text-justify">
+                        <form action="">
+                            {%  csrf_token %}
+                            <div class="form-group">
+                                <label for="Titre" class="mb-0">Titre</label>
+                                <input type="text" id="Titre" class="form-control" placeholder="Titre"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Contenu" class="mb-0">Contenu</label>
+                                <textarea id="Contenu" class="form-control" placeholder="Contenu"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="Fichier" class="mb-0">Fichier</label>
+                                <input type="file" id="Fichier" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Date_pub" class="mb-0">Date de Publication</label>
+                                <input type="date" id="Date_pub" class="form-control"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="Type" class="mb-0">Type</label>
+                                <select id="Type" class="custom-select">
+                                    <option value="News">News</option>
+                                    <option value="Posts">Posts</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default">Modifier</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
+                    </div>
+                </div>
             </div>
         </div>
 
