--- a/templates/user_admin.html
+++ b/templates/user_admin.html
@@ -2,8 +2,6 @@
 {% load static %}
 
     {% block stylesheet %}
-    <!--Favicon Icon-->
-        <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
         <!--Bootstrap CSS-->
         <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
         <!--Custom style.css-->
@@ -19,7 +17,6 @@
         <!--Datatable-->
         <link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}">
 
-        <link rel="stylesheet" href="{% static 'js/form-validator/theme-default.min.css' %}">
     {% endblock stylesheet %}
 
     {% block title %}Utilisateurs{% endblock title %}
@@ -111,12 +108,13 @@
                                         </thead>
 
                                         <tbody>
+                                            {% for us in Users %}
                                             <tr>
-                                                <td>Tiger Nixon</td>
-                                                <td>System Architect</td>
-                                                <td>Edinburgh</td>
-                                                <td>61</td>
-                                                <td>2011/04/25</td>
+                                                <td>{{ us.Nom_Complet }}</td>
+                                                <td>{{ us.Email }}</td>
+                                                <td>{{ us.Adresse }}</td>
+                                                <td>{{ us.Profession }}</td>
+                                                <td>{{ us.Status }}</td>
                                                 <td>
                                                     <button class="btn btn-info btn-round" data-toggle="modal" data-target="#update">
                                                         <i class="fa fa-edit"></i>
@@ -126,6 +124,7 @@
                                                     </button>
                                                 </td>
                                             </tr>
+                                            {% endfor %}
                                         </tbody>
                                     </table>
                                 </div>
@@ -144,29 +143,30 @@
                             <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
                         </div>
                         <div class="modal-body text-justify">
-                            <form action="">
+                            <form method="POST" action="{% url 'create_user_admin' %}">
+                                {%  csrf_token %}
                                 <div class="form-group">
                                     <label for="Nom_Complet" class="mb-0">Nom Complet</label>
-                                    <input type="text" id="Nom_Complet" class="form-control" placeholder="Nom Complet"/>
+                                    <input type="text" name="Nom_Complet" class="form-control" placeholder="Nom Complet" required/>
                                 </div>
                                 <div class="form-group">
                                     <label for="Email" class="mb-0">Email</label>
-                                    <input type="email" id="Email" class="form-control" placeholder="johndoe@example.com" />
+                                    <input type="email" name="Email" class="form-control" placeholder="johndoe@example.com" required/>
                                 </div>
                                 <div class="form-group">
                                     <label for="Adresse" class="mb-0">Adresse</label>
-                                    <input type="text" id="Adresse" class="form-control" placeholder="Adresse" />
+                                    <input type="text" name="Adresse" class="form-control" placeholder="Adresse" required/>
                                 </div>
                                 <div class="form-group">
                                     <label for="Profession" class="mb-0">Profession</label>
-                                    <select id="Profession" class="custom-select">
+                                    <select name="Profession" class="custom-select">
                                         <option value="Etudiant">Etudiant</option>
                                         <option value="Professeur">Professeur</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
                                     <label for="Status" class="mb-0">Status</label>
-                                    <select id="Status" class="custom-select">
+                                    <select name="Status" class="custom-select">
                                         <option value="Utilisateur Simple">Utilisateur Simple</option>
                                         <option value="Psychologue">Psychologue</option>
                                     </select>
@@ -174,7 +174,7 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default">Ajouter</button>
+                            <input class="btn btn-default" type="submit"  value="Enregistrer">
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
                         </div>
                     </div>
@@ -190,6 +190,7 @@
                         </div>
                         <div class="modal-body text-justify">
                             <form action="">
+                                {%  csrf_token %}
                                 <div class="form-group">
                                     <label for="Nom_Complet" class="mb-0">Nom Complet</label>
                                     <input type="text" id="Nom_Complet" class="form-control" placeholder="Nom Complet" />
@@ -219,7 +220,7 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default">Enregistrer</button>
+                            <button type="button" class="btn btn-default">Modifier</button>
                             <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
                         </div>
                     </div>
@@ -258,7 +259,6 @@
        <!--Custom Js Script-->
        <script src="{% static 'js/custom.js' %}"></script>
        <!--Custom Js Script-->
-        <script src="{% static 'js/form-validator/jquery.form-validator.min.js' %}"></script>
         <script>
             $('#example').DataTable();
         </script>
