fonctionnalités news_post fait

--- a/templates/manage_stress_admin.html
+++ b/templates/manage_stress_admin.html
@@ -51,7 +51,7 @@
                                 </a>
                             </li>
                             <li class="parent">
-                                <a href="/news_post" class=""><i class="fas fa-address-book mr-3"></i>
+                                <a href="/news_post_admin" class=""><i class="fas fa-address-book mr-3"></i>
                                     <span class="none">News ou Post</span>
                                 </a>
                             </li>
