--- a/templates/user_admin.html
+++ b/templates/user_admin.html
@@ -55,7 +55,7 @@
                                     </a>
                                 </li>
                                 <li class="parent">
-                                    <a href="/news_post" class=""><i class="fas fa-address-book mr-3"></i>
+                                    <a href="/news_post_admin" class=""><i class="fas fa-address-book mr-3"></i>
                                         <span class="none">News ou Post</span>
                                     </a>
                                 </li>
@@ -89,9 +89,9 @@
                         <div class="col-sm-12">
                             <!--Datatable-->
                             <div class="mt-1 mb-3 p-3 button-container bg-white border shadow-sm">
-                                <button class="btn btn-success" data-toggle="modal" data-target=".bd-example-modal">
+                                <a class="btn btn-success" href="/add_user_admin">
                                     <i class="fas fa-plus mr-3"></i>Ajouter
-                                </button>
+                                </a>
                                 
 
                                 <div class="table-responsive">
@@ -116,7 +116,7 @@
                                                 <td>{{ us.Profession }}</td>
                                                 <td>{{ us.Status }}</td>
                                                 <td>
-                                                    <a class="btn btn-info btn-round" data-toggle="modal" data-target="#update" href="/edit_user_admin/{{ us.id }}">
+                                                    <a class="btn btn-info btn-round" href="/edit_user_admin/{{ us.id }}">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
                                                     <a class="btn btn-danger btn-round" href="/delete_user_admin/{{ us.id }}">
@@ -134,104 +134,6 @@
                     <!--Dashboard widget-->
                 </div>
             </div>
-
-            <div class="modal fade bd-example-modal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header text-center">
-                            <h5 class="modal-title text-secondary"><strong>Ajout d'utilisateur</strong></h5>
-                            <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
-                        </div>
-                        <div class="modal-body text-justify">
-                            <form action="/create_user_admin">
-                                {%  csrf_token %}
-                                <div class="form-group">
-                                    <label for="Nom_Complet" class="mb-0">Nom Complet</label>
-                                    <input type="text" name="Nom_Complet" class="form-control" placeholder="Nom Complet" required/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Email" class="mb-0">Email</label>
-                                    <input type="email" name="Email" class="form-control" placeholder="johndoe@example.com" required/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Adresse" class="mb-0">Adresse</label>
-                                    <input type="text" name="Adresse" class="form-control" placeholder="Adresse" required/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Profession" class="mb-0">Profession</label>
-                                    <select name="Profession" class="custom-select">
-                                        <option value="Etudiant">Etudiant</option>
-                                        <option value="Professeur">Professeur</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Status" class="mb-0">Status</label>
-                                    <select name="Status" class="custom-select">
-                                        <option value="Utilisateur Simple">Utilisateur Simple</option>
-                                        <option value="Psychologue">Psychologue</option>
-                                    </select>
-                                </div>
-                                <input class="btn btn-default" type="submit"  value="Enregistrer">
-                                <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="modal fade" id="update" tabindex="-1" role="dialog" aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header text-center">
-                            <h5 class="modal-title text-secondary"><strong>Modification info utilisateur</strong></h5>
-                            <button type="button" class="close pull-right" data-dismiss="modal">&times;</button>
-                        </div>
-                        <div class="modal-body text-justify">
-                            <form action="/update_user_admin/{{ Users_e.id }}">
-                                {%  csrf_token %}
-                                <div class="form-group">
-                                    <label for="Nom_Complet" class="mb-0">Nom Complet</label>
-                                    <input type="text" id="Nom_Complet" class="form-control" value="{{ Users_e.Nom_Complet }}" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="Email" class="mb-0">Email</label>
-                                    <input type="email" id="Email" class="form-control" value="{{ Users_e.Email }}" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="Adresse" class="mb-0">Adresse</label>
-                                    <input type="text" id="Adresse" class="form-control" value="{{ Users_e.Adresse }}" />
-                                </div>
-                                <div class="form-group">
-                                    <label for="Profession" class="mb-0">Profession</label>
-                                    <select id="Profession" class="custom-select">
-                                        {% if Users_e.Profession == "Etudiant" %}
-                                            print("<option value="Etudiant">Etudiant</option><option value="Professeur">Professeur</option>")
-                                        {% else %}
-                                            print("<option value="Professeur">Professeur</option><option value="Etudiant">Etudiant</option>")
-                                        {% endif %}
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label for="Status" class="mb-0">Status</label>
-                                    <select id="Status" class="custom-select">
-                                        {% if Users_e.Status == "Utilisateur Simple" %}
-                                            print("<option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option>")
-                                        {% else %}
-                                            print("<option value="Psychologue">Psychologue</option><option value="Utilisateur Simple">Utilisateur Simple</option>")
-                                        {% endif %}
-                                    </select>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default">Modifier</button>
-                            <button type="button" class="btn btn-danger" data-dismiss="modal">Annuler</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
             <!--Main Content-->
         {% endblock content %}
 
