--- a/templates/add_user_admin.html
+++ b/templates/add_user_admin.html
@@ -50,12 +50,12 @@
                                     </a>  
                                 </li>
                                 <li class="parent">
-                                    <a href="#" class=""><i class="fas fa-user-circle mr-3"></i>
+                                    <a href="/user_admin" class=""><i class="fas fa-user-circle mr-3"></i>
                                         <span class="none">Utilisateur </span>
                                     </a>
                                 </li>
                                 <li class="parent">
-                                    <a href="/news_post" class=""><i class="fas fa-address-book mr-3"></i>
+                                    <a href="/news_post_admin" class=""><i class="fas fa-address-book mr-3"></i>
                                         <span class="none">News ou Post</span>
                                     </a>
                                 </li>
@@ -94,26 +94,26 @@
                                     {%  csrf_token %}
                                     <div class="form-group row">
                                         <label for="Nom_Complet" class="control-label col-sm-2">Nom Complet</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <input type="text" name="Nom_Complet" class="form-control" placeholder="Nom Complet" />
                                         </div>
                                     </div>
 
                                     <div class="form-group row">
                                         <label for="Email" class="control-label col-sm-2">Email</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <input type="email" name="Email" class="form-control" placeholder="johndoe@example.com" />
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="Adresse" class="control-label col-sm-2">Adresse</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <input type="text" name="Adresse" class="form-control" placeholder="Adresse" />
                                         </div>
                                     </div>
                                     <div class="form-group row">
                                         <label for="Profession" class="control-label col-sm-2">Profession</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <select name="Profession" class="custom-select">
                                                 <option value="Etudiant">Etudiant</option><option value="Professeur">Professeur</option>")
                                                 <option value="Professeur">Professeur</option><option value="Etudiant">Etudiant</option>")
@@ -122,15 +122,19 @@
                                     </div>
                                     <div class="form-group row">
                                         <label for="Status" class="control-label col-sm-2">Status</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <select name="Status" class="custom-select">
                                                 <option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option>")
                                                 <option value="Psychologue">Psychologue</option><option value="Utilisateur Simple">Utilisateur Simple</option>")
                                             </select>
                                         </div>
                                     </div>
-                                    <input type="submit" class="btn btn-default" value="Ajouter">
-                                    <a class="btn btn-danger" href="/user_admin">Annuler</a>
+                                    <div class="form-group row">
+                                        <div class="offset-sm-2 col-sm-9">
+                                            <input type="submit" class="btn btn-success" value="Ajouter">
+                                            <a class="btn btn-danger" href="/user_admin">Annuler</a>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                         </div>
