--- a/templates/edit_user_admin.html
+++ b/templates/edit_user_admin.html
@@ -50,12 +50,12 @@
                                     </a>  
                                 </li>
                                 <li class="parent">
-                                    <a href="#" class=""><i class="fas fa-user-circle mr-3"></i>
+                                    <a href="/user_admin" class=""><i class="fas fa-user-circle mr-3"></i>
                                         <span class="none">Utilisateur </span>
                                     </a>
                                 </li>
                                 <li class="parent">
-                                    <a href="/news_post" class=""><i class="fas fa-address-book mr-3"></i>
+                                    <a href="/news_post_admin" class=""><i class="fas fa-address-book mr-3"></i>
                                         <span class="none">News ou Post</span>
                                     </a>
                                 </li>
@@ -113,7 +113,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label for="Profession" class="control-label col-sm-2">Profession</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <select name="Profession" class="custom-select">
                                                 {% if Users_e.Profession == "Etudiant" %}
                                                     print("<option value="Etudiant">Etudiant</option><option value="Professeur">Professeur</option>")
@@ -125,7 +125,7 @@
                                     </div>
                                     <div class="form-group row">
                                         <label for="Status" class="control-label col-sm-2">Status</label>
-                                        <div class="col-sm-8">
+                                        <div class="col-sm-10">
                                             <select name="Status" class="custom-select">
                                                 {% if Users_e.Status == "Utilisateur Simple" %}
                                                     print("<option value="Utilisateur Simple">Utilisateur Simple</option><option value="Psychologue">Psychologue</option>")
@@ -135,8 +135,12 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <input type="submit" class="btn btn-default" value="Modifier">
-                                    <a class="btn btn-danger" href="/user_admin">Annuler</a>
+                                    <div class="form-group row">
+                                        <div class="offset-sm-2 col-sm-9">
+                                            <input type="submit" class="btn btn-success" value="Modifier">
+                                            <a class="btn btn-danger" href="/user_admin">Annuler</a>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
                         </div>
